--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NITHARA Crafts - Elegant Gift Hampers</title>
-  <link rel="icon" href="/Logo2.png" type="image/jpeg">
+  <link rel="icon" href="Logo_brown_favicon.png" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Playfair+Display:wght@400;600;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -43,7 +43,8 @@
         <p>Every creation is a reflection of love, meticulous craftsmanship, and timeless charm. We believe a gift should be as memorable as the moment it celebrates.</p>
       </div>
       <div class="col-lg-6 mt-4 mt-lg-0">
-        <img src="/Logo.jpg" alt="Elegant Crafting" class="img-fluid rounded shadow-lg">
+        <img src="Logo_brown_png.png" alt="Logo" class="img-fluid rounded">
+        <!-- shadow-lg -->
       </div>
     </div>
   </section>
@@ -210,7 +211,21 @@
   <footer class="footer">
     <p class="mb-0">© 2025 Nithara Crafts | Make each gift a perfect token of love for your dear ones</p>
     <p class="mb-0 mt-1"><small>Designed with elegance and sophistication.</small></p>
+    <div class="social-media mt-3">
+      <a href="https://www.instagram.com/nithara_crafts" target="_blank" class="me-3" aria-label="Follow us on Instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://facebook.com/nitharacrafts" target="_blank" class="me-3" aria-label="Follow us on Facebook"><i class="bi bi-facebook"></i></a>
+      <a href="https://x.com/Nithara_Crafts" target="_blank" class="me-3" aria-label="Follow us on X"><i class="bi bi-twitter-x"></i></a>
+      <a href="https://wa.me/917356115809" target="_blank" aria-label="Contact us on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+    </div>
   </footer>
+
+  <!-- Sticky Social Media Sidebar -->
+  <div class="social-sidebar">
+    <a href="https://www.instagram.com/nithara_crafts" target="_blank" aria-label="Follow us on Instagram"><i class="bi bi-instagram"></i></a>
+    <a href="https://facebook.com/nitharacrafts" target="_blank" aria-label="Follow us on Facebook"><i class="bi bi-facebook"></i></a>
+    <a href="https://x.com/Nithara_Crafts" target="_blank" aria-label="Follow us on X"><i class="bi bi-twitter-x"></i></a>
+    <a href="https://wa.me/917356115809" target="_blank" aria-label="Contact us on WhatsApp"><i class="bi bi-whatsapp"></i></a>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
